--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Deporte
-    </ion-title>
-
+    <ion-title>home</ion-title>
   </ion-toolbar>
 </ion-header>
 
