--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,3 +5,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-button size="large" (click)="onLogout()">Logout</ion-button>
+  <ion-button size="large" routerLink="/admin">Admin</ion-button>
+</ion-content>
