--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 <ion-content>
   <ion-button size="large" (click)="onLogout()">Logout</ion-button>
-  <ion-button size="large" routerLink="/admin">Admin</ion-button>
+  <ion-button size="large" routerLink="/admin">Crear Partido</ion-button>
 </ion-content>
