--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,6 +15,6 @@
   </ion-item>
 
   <ion-button size="small" (click)="onLogin()">Iniciar sesión</ion-button><br>
-  <a routerLink="/registro">¿No tienes ID? Créate uno ahora.</a>
+  <a routerLink="/register">¿No tienes ID? Créate uno ahora.</a>
 
 </ion-content>
