--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -13,28 +13,24 @@
   <div *ngFor="let cat of items" class="category-block">
 
     <ion-row no-padding class="category-banner">
-      <ion-col text-left button tappable (click)="cat.expanded = !cat.expanded" align-self-center>
+      <ion-col button tappable (click)="cat.expanded = !cat.expanded" class="ion-align-self-center ion-text-left">
         {{cat.category}}
       </ion-col>
     </ion-row>
     <ion-slides [options]="sliderConfig">
       <ion-slide *ngFor="let product of cat.products">
-
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>
-              {{ product.name }} - ${{ product.price }}
-            </ion-card-title>
-            <ion-card-content>
-              <img src="" alt="">
-              <ion-button type="button" name="button"></ion-button>
-            </ion-card-content>
-
-
-          </ion-card-header>
-        </ion-card>
-
-
+        <div *ngIf="cat.expanded"> <!--este div hara que se muestre expandido el que tenga el expanded: true en el data service -->
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>
+                 {{ product.price }}
+              </ion-card-title>
+              <ion-card-content>
+                <ion-button expand="full" (click)="addToCart(product)">Add to Cart</ion-button>
+              </ion-card-content>
+            </ion-card-header>
+          </ion-card>
+        </div>
       </ion-slide>
     </ion-slides>
   </div>
