--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -1,9 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>cart</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Configuración del partido</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+<!-- ESTA BIEN, SALE ERROR PQ QUIERO MOSTRAR DATOS EN EL CARRO QUE NO TENGO EN LA BASE DE DATOS, POR EJEMPLO EL PRECIO ETC -->
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let item of selectedItems" lines = "inset">
+      {{ item.count }}x {{ item.name }} - {{ item.price | currency: 'USD':'symbol' }}
+      <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'USD':'symbol' }}</ion-label>
+    </ion-item>
+    <ion-item>
+      Total: <span slot="end"> {{ total | currency: 'USD': 'symbol'}} </span>
+    </ion-item>
+  </ion-list>
 </ion-content>
