--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -12,11 +12,14 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of selectedItems" lines = "inset">
-      {{ item.count }}x {{ item.name }} - {{ item.price | currency: 'USD':'symbol' }}
-      <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'USD':'symbol' }}</ion-label>
+      {{ item.price }} h.
+
+      <!-- <ion-label slot="end" text-right>{{ (item.price * item.count) | currency:'USD':'symbol' }}</ion-label> -->
     </ion-item>
-    <ion-item>
-      Total: <span slot="end"> {{ total | currency: 'USD': 'symbol'}} </span>
+    <ion-item *ngFor="let item of selectedItems" lines="inset">
+      {{ item.date }}
+      <!-- Total: <span slot="end"> {{ total | currency: 'USD': 'symbol'}} </span> -->
     </ion-item>
   </ion-list>
+  <ion-button> Añadir </ion-button>
 </ion-content>
