--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -14,7 +14,7 @@
     <ion-input type="password" [(ngModel)]="user.password" placeholder="Password"></ion-input>
   </ion-item>
 
-  <ion-button size="small" (click)="onRegister()">Continuar Registro</ion-button>
-  <hr>Ya tienes un ID? <a size="small" routerLink="/login" style="text-decoration:none">Logeate aqui > </a>
+  <ion-button size="small" (click)="onRegister()">Confirmar Registro</ion-button>
+  <hr>¿Ya tienes un ID? <a size="small" routerLink="/login" style="text-decoration:none">Logeate aquí > </a>
 
 </ion-content>
