--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
     <ion-title>
       Crear Partido Calendar
       {{ ViewTitle }}
@@ -14,7 +17,7 @@
 
   <ion-card>
     <ion-card-header tappable (click)="collapseCard = !collapseCard">
-      <ion-card-title>New Event/ New Match / Configurar Partido</ion-card-title>
+      <ion-card-title>Configurar Partido</ion-card-title>
     </ion-card-header>
     <ion-card-content *ngIf="!collapseCard">
       <ion-item>
@@ -27,10 +30,10 @@
         <ion-label>Start</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.startTime" [min]="minDate"></ion-datetime>
       </ion-item>
-      <ion-item>
+      <!-- <ion-item>
         <ion-label>End</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.endTime" [min]="minDate"></ion-datetime>
-      </ion-item>
+      </ion-item> -->
       <ion-item>
         <ion-label>All Day ?</ion-label>
         <ion-checkbox [(ngModel)]="event.allDay"></ion-checkbox>
@@ -74,7 +77,7 @@
     (onTitleChanged)="onViewTitleChanged($event)"
     (onTimeSelected)="onTimeSelected($event)"
     startHour="6"
-    endHour="20"
+    endHour="24"
     step="30"
     startingDayWeek="1">
   </calendar>
