--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -68,7 +68,7 @@
   </ion-row>
 
 
-
+<!-- Cuando le de al onEventSelected y aparezcan los datos del partido crear un boton para el registro etc-->
   <calendar
     [eventSource]="eventSource"
     [calendarMode]="calendar.mode"
