--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,7 +5,7 @@
   </ion-toolbar>
 
 </ion-header>
-
+<!-- ESTILAR PARA QUE QUEDE CENTRADO EN LA PAGINA -->
 <ion-content class="ion-padding">
   <ion-item>
     <ion-input type="text" [(ngModel)]="user.email" placeholder="Email"></ion-input>
