--- a/src/app/event-modal/event-modal.page.html
+++ b/src/app/event-modal/event-modal.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Event Details</ion-title>
   </ion-toolbar>
@@ -25,4 +25,4 @@
   <ion-button full icon-left (click)="save()">
     <ion-icon name="checkmark"></ion-icon> Add Event
   </ion-button>
-</ion-content>
+</ion-content> -->
