--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -38,7 +38,10 @@
         <ion-label>All Day ?</ion-label>
         <ion-checkbox [(ngModel)]="event.allDay"></ion-checkbox>
       </ion-item>
-      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">Add Event</ion-button>
+      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">
+        <!-- <ion-icon name="checkmark"></ion-icon> Add Event -->
+        Compartir
+      </ion-button>
     </ion-card-content>
   </ion-card>
 
@@ -53,7 +56,7 @@
       <ion-button expand="block" [color]="calendar.mode == 'day' ? 'primary': 'secondary'" (click)="changeMode('day')">Day</ion-button>
     </ion-col>
 
-    <ion-col size="6" ion-text-left>
+    <!-- <ion-col size="6" ion-text-left>
       <ion-button fill="clear" (click)="back()">
         <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
       </ion-button>
@@ -63,7 +66,7 @@
       <ion-button fill="clear" (click)="next()">
         <ion-icon name="arrow-forward" slot="icon-only"></ion-icon>
       </ion-button>
-    </ion-col>
+    </ion-col> -->
 
   </ion-row>
 
