--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -45,7 +45,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-row>
+  <!-- <ion-row>
     <ion-col size="4">
       <ion-button expand="block" [color]="calendar.mode == 'month' ? 'primary': 'secondary'" (click)="changeMode('month')">Month</ion-button>
     </ion-col>
@@ -54,7 +54,7 @@
     </ion-col>
     <ion-col size="4">
       <ion-button expand="block" [color]="calendar.mode == 'day' ? 'primary': 'secondary'" (click)="changeMode('day')">Day</ion-button>
-    </ion-col>
+    </ion-col> -->
 
     <!-- <ion-col size="6" ion-text-left>
       <ion-button fill="clear" (click)="back()">
@@ -68,7 +68,7 @@
       </ion-button>
     </ion-col> -->
 
-  </ion-row>
+  <!-- </ion-row> -->
 
 
 <!-- Cuando le de al onEventSelected y aparezcan los datos del partido crear un boton para el registro etc-->
