--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -34,10 +34,10 @@
         <ion-label>End</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY HH:mm" pickerFormat="MMM D:HH:mm" [(ngModel)]="event.endTime" [min]="minDate"></ion-datetime>
       </ion-item> -->
-      <ion-item>
+      <!-- <ion-item>
         <ion-label>All Day ?</ion-label>
         <ion-checkbox [(ngModel)]="event.allDay"></ion-checkbox>
-      </ion-item>
+      </ion-item> -->
       <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">
         <!-- <ion-icon name="checkmark"></ion-icon> Add Event -->
         Compartir
