--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,4 +8,12 @@
 
 <ion-content>
 
+<!-- lugar recinto hora -->
+<div *ngFor="let cat of listaPartidos">
+
+  {{ cat.title }}
+</div>
+
+
+
 </ion-content>
