--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -4,4 +4,8 @@
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
+
 </ion-header>
+<ion-content>
+  <ion-button size="large" routerLink="/admin">Crear Partido</ion-button>
+</ion-content>
