--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-title>Inicia sesión</ion-title>
 
   </ion-toolbar>
@@ -14,7 +14,7 @@
     <ion-input type="password" [(ngModel)]="user.password" placeholder="Password"></ion-input>
   </ion-item>
 
-  <ion-button size="small" (click)="onLogin()">Iniciar sesión</ion-button><br>
+  <ion-button size="small" (click)="onLogin()"  color="dark">Iniciar sesión</ion-button><br>
   <a routerLink="/register">¿No tienes ID? Créate uno ahora.</a>
 
 </ion-content>
