--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,11 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-button size="large" (click)="onLogout()">Logout</ion-button>
-  <ion-button size="large" routerLink="/admin">Crear Partido</ion-button>
+  <ion-button size="large" (click)="onLogout()" color="light">Logout</ion-button>
 </ion-content>
