--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar  color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-button size="large" routerLink="/admin" color="danger">Crear Partido</ion-button>
+</ion-content>
