--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
@@ -38,7 +38,7 @@
         <ion-label>All Day ?</ion-label>
         <ion-checkbox [(ngModel)]="event.allDay"></ion-checkbox>
       </ion-item>
-      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''">
+      <ion-button fill="outline" expand="block" (click)="addEvent()" [disabled]="event.title == ''" color="dark">
         <!-- <ion-icon name="checkmark"></ion-icon> Add Event -->
         Compartir
       </ion-button>
