--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar  color="dark">
     <ion-title>
       Deporte
     </ion-title>
@@ -7,5 +7,15 @@
 </ion-header>
 
 <ion-content>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button class="ion-text-right" color="danger" routerLink="/admin">
+      <!--Basic: auto-select the icon based on the platform -->
+      <ion-icon name="md-add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+
+
+  
 
 </ion-content>
