--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="barcode"></ion-icon>
-      <ion-label>Deporte</ion-label>
+  <ion-tab-bar slot="bottom" >
+    <ion-tab-button tab="tab1" class="llo">
+      <ion-icon name="barcode" color="dark"></ion-icon>
+      <ion-label color="dark">Deporte</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="person"></ion-icon>
-      <ion-label>Perfil</ion-label>
+    <ion-tab-button tab="tab2" class="llo">
+      <ion-icon name="person" color="dark"></ion-icon>
+      <ion-label color="dark">Perfil</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="ios-more"></ion-icon>
-      <ion-label>Más</ion-label>
+    <ion-tab-button tab="tab3" class="llo">
+      <ion-icon name="ios-more" color="dark"></ion-icon>
+      <ion-label color="dark">Más</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
