--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,8 +14,16 @@
     </ion-fab-button>
   </ion-fab>
 
-
-
-  
+  <ion-list>
+     <ion-item>
+       <ion-label>Descripcion</ion-label>
+     </ion-item>
+     <ion-item>
+       <ion-label>Titulo</ion-label>
+     </ion-item>
+     <ion-item>
+       <ion-label>Fecha y hora</ion-label>
+     </ion-item>
+   </ion-list>
 
 </ion-content>
