--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -27,10 +27,10 @@
    </ion-list>
 
 <!-- lugar recinto hora -->
-<div *ngFor="let cat of listaPartidos">
+<!-- <div *ngFor="let cat of listaPartidos">
 
   {{ cat.title }}
-</div>
+</div> -->
 
 
 
