--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,16 +14,23 @@
   </ion-fab>
 
   <ion-list>
-     <ion-item>
-       <ion-label>Descripcion</ion-label>
-     </ion-item>
-     <ion-item>
-       <ion-label>Titulo</ion-label>
-     </ion-item>
-     <ion-item>
-       <ion-label>Fecha y hora</ion-label>
-     </ion-item>
-   </ion-list>
+     <ion-item-sliding *ngFor='let task of tasks | async'>
+      <ion-item>
+        <ion-label>{{ task.title }}</ion-label>
+        <ion-label>{{ task.desc}}</ion-label>
+        <!-- <ion-label>{{ task.startTime }}</ion-label> -->
+        <ion-checkbox (ionChange)="updateTask( task )" [checked]="task.done"></ion-checkbox>
+      </ion-item>
+      <ion-item>
+        <ion-label>{{ task.startTime }}</ion-label>
+      </ion-item>
+       <ion-item-options>
+        <ion-button class="ion-text-left" color="danger" (click)="removeTarea( task )">
+          Delete
+        </ion-button>
+       </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 
 <!-- lugar recinto hora -->
 <!-- <div *ngFor="let cat of listaPartidos">
